<resources>
    <string name="app_name">Simplify Decisions</string>

    <string name="issue_default_title">default issue title</string>
    <string name="decision_default_title">Default decision title</string>
    <string name="opinions_section_header">Stuff I Need To Figure Out</string>
    <string name="facts_header_text">My Facts</string>
    <string name="issue_title_hint">Dilemma Title</string>
    <string name="new_issue_title">New Dilemma</string>
    <string name="new_decision_title">New Decision</string>
    <string name="issue_title_transition_name">issue_title_transition</string>
    <string name="edit_button_contentdesc">edit button</string>
    <string name="decision_title_hint">Decision Title</string>
    <string name="new_task_hint_text">New task</string>

    <string name="default_opinion_title">New argument</string>
    <string name="importance_label">Importance</string>
    <string name="low_priority">Low</string>
    <string name="medium_priority">Medium</string>
    <string name="high_priority">High</string>
    <string name="related_issue_label_text">related dilemma:</string>
    <string name="save_button_text">SAVE</string>
    <string name="tasks_label">To-Do List</string>
    <string name="add_new_task_text">+ add new task</string>
    <string name="template_icon">template icon</string>
    <string name="new_dilemma_label">New Dilemma</string>
    <string name="from_template_label">From template</string>
    <string name="bot_drawer_trans_name">bottom_drawer_transition_name</string>
    <string name="title_label">Title:</string>
    <string name="new_issue_logo_transition">new_issue_logo_transition</string>
    <string name="option_a_name_hint">Option \'A\' name</string>
    <string name="option_b_name_hint">Option \'B\' name</string>
    <string name="default_category">General</string>
    <string name="default_tasks_left_text">1/1</string>
    <string name="new_category_hint">Enter category name</string>
    <string name="option_b">option B</string>
    <string name="option_a">option A</string>
    <string name="opinion_title">Argument Title</string>
    <string name="opinions_bottom_drawer_nav">opinions_bottom_drawer_trans</string>
    <string name="new_issue_title_hint">New Dilemma Title</string>
    <string name="edit_issue_title">Edit</string>
    <string name="make_a_decision">Make a decision</string>
    <string name="collaborate_title">Collaborate</string>
    <string name="edit_opinion_title">Edit</string>
    <string name="edit_title_label">Edit Title</string>

    <string name="edit_issue_title_label">Edit Dilemma Title</string>
    <string name="edit_opinion_title_label">Edit Argument Title</string>
    <string name="frame_transition_name_extension">frame</string>
    <string name="save_menu_item">SAVE</string>

    <string name="new_opinion_item_text">New</string>
    <string name="goals">Goals</string>
    <string name="add_a_goal">+ Add a goal</string>
    <string name="edit_decision_title">Edit</string>
    <string name="edit_goal_info">Edit Goal info</string>
    <string name="goal_title">Goal title</string>
    <string name="bottom_Drawer_dash_transition">bottom_Drawer_dash_transition</string>
    <string name="dash_to_issues_bot_trans">dash_to_issues_bot_trans</string>
    <string name="dash_to_issues_logo_trans">dashtoissueslogotrans</string>
    <string name="noIssueTitle">Unnamed Dilemma</string>
    <string name="unfinished_tasks">Unfinished Tasks</string>
    <string name="alertdialog_title">Warning</string>
    <string name="unsaved_progress_message">Are you sure?\nAll unsaved progress will be lost</string>
    <string name="ignore_button_text">IGNORE</string>
    <string name="game_changer_imp">Game Changer</string>
    <string name="high_imp">High</string>
    <string name="medium_imp">Medium</string>
    <string name="low_imp">Low</string>
    <string name="demo_date_text">12 Mar 2020 15:30</string>
    <string name="add_to_my_calender">Add to my calender</string>
    <string name="first_dilemma_title">New Dilemma</string>
    <string name="first_decision_title">New Decision</string>
    <string name="first_dilemma_text">Try adding a new dilemma</string>
    <string name="first_decision_text">Commit to your decision, set goals and share your success!
        \nNot sure yet? Go back and create a dilemma</string>
    <string name="first_goal_title">Set Goals</string>
    <string name="first_goal_text">"Setting goals will help you commit to the decision
        \nKeeping your goals measurable and relatively simple is the key to success"</string>
    <string name="first_task_title">New Task</string>
    <string name="first_task_text">Write down tasks that will help you be sure.
        \n(\"Compare prices online\", \"Consult a friend\"..) </string>
    <string name="add_a_reminder">Add a reminder</string>
    <string name="channel_name">decisions_channel</string>
    <string name="channel_description">reminders channel</string>
    <string name="action_goal_reminded">action_goal_reminded</string>
    <string name="category_label">Category</string>
    <string name="decisions_headline">Decisions</string>
    <string name="issues_headline">Dilemmas</string>
    <string name="new_template">new</string>
    <string name="due_date_passed_contentdesc">due date passed</string>
    <string name="edit_label">Edit</string>
    <string name="delete_label">Delete</string>
    <string name="goal_mark_done">Mark Done</string>
    <string name="goal_mark_unfinished">Mark Unfinished</string>
    <string name="Help">help_title</string>
    <string name="default_importance_score">50</string>
    <string name="due_date">Due Date</string>
    <string name="option_a_btn_text">Option A</string>
    <string name="option_b_btn_text">Option B</string>
    <string name="default_score">0</string>
    <string name="num_of_arguments"># of arguments:</string>
    <string name="share_goal_completed1">Iv\'e just marked the goal \"</string>
    <string name="share_goal_completed2">\" DONE in the Simplify Decision app!\n Yay!</string>
    <array name="instructions_issue_details_title">
        <item>New Argument</item>
        <item>Take your time</item>
    </array>
    <array name="instructions_issue_details_body">
        <item>Add an argument in favor one of the options
            \nDifferent arguments can have different impact on the decision
            \nTry it!</item>
        <item>When you are ready click here to take a decision and commit to it</item>
    </array>



</resources>
