<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    android:paddingTop="@dimen/top_padding_templates"
    tools:context=".ui.issues.CreateFromTemplateFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_dilemma_label"
            style="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/primary_text_dark"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_template_label"
            android:textSize="18sp"
            android:textColor="@color/light_text_second" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/topics_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/small_drawer_logo"
            android:layout_width="@dimen/drawer_logo_size"
            android:layout_height="@dimen/drawer_logo_size"
            android:transitionName="@string/new_issue_logo_transition"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/temp_logo"
            android:elevation="16dp"
            app:layout_constraintBottom_toTopOf="@id/from_template_bottom_drawer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/from_template_bottom_drawer" />

        <FrameLayout
            android:id="@+id/from_template_bottom_drawer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_drawer_background"
            android:transitionName="@string/bot_drawer_trans_name"
            android:padding="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>