<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    android:clickable="true"
    tools:context=".ui.issues.OpinionDetailsFragment">



    <LinearLayout
        android:id="@+id/top_drawer_opinion_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="16dp"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/edit_opinion_toolbar"
            app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            android:elevation="@dimen/toolbar_elevation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:subtitleTextAppearance="@style/ToolbarSecondaryTextStyle"
            android:background="@android:color/transparent">

            <TextView
                style="@style/ToolbarTitleStyle"
                android:id="@+id/opinion_details_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/related_issue_label"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:text="@string/related_issue_label_text"
                android:textColor="@android:color/primary_text_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/related_issue_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/label_to_text_marg"
                android:textSize="16sp"
                android:textColor="@android:color/primary_text_dark"

                app:layout_constraintStart_toEndOf="@id/related_issue_label"
                app:layout_constraintTop_toTopOf="@id/related_issue_label"/>

        </LinearLayout>
    </LinearLayout>


    <FrameLayout
        android:id="@+id/opinion_details_bottom_drawer"
        android:transitionName="@string/opinions_bottom_drawer_nav"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:animateLayoutChanges="true"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/bottom_drawer_vert_margin"
        android:background="@drawable/bottom_drawer_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="4dp"
                    android:text="Category:" />

                <Spinner
                    android:id="@+id/category_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:dropDownWidth="wrap_content" />

                <EditText
                    android:id="@+id/new_category_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:hint="@string/new_category_hint"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:visibility="invisible" />

            </LinearLayout>

            <TextView
                android:id="@+id/importance_label"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="6dp"
                android:text="@string/importance_label"
                android:textColor="@android:color/primary_text_light" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.marcinmoskala.arcseekbar.ArcSeekBar
            android:id="@+id/importance_sb"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            app:thumb="@drawable/small_logo_indicator"
            app:roundEdges="true"
            app:progressBackgroundColor="@android:color/darker_gray"
            app:progressBackgroundWidth="20dp"
            app:progress="40"
            app:maxProgress="80"
            app:progressWidth="30dp"/>

        <TextView
            android:id="@+id/importance_sb_tv"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginHorizontal="80dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-black"
            android:gravity="bottom|center_horizontal"
            android:textAlignment="center"
            android:textAllCaps="true" />
    </FrameLayout>


    <!-- RadioGroup for visible selection of a priority -->


            <TextView
        android:id="@+id/tasks_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_gravity="start"
        android:layout_marginTop="8dp"
        android:text="@string/tasks_label"
        android:textColor="@android:color/primary_text_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tasks_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="afterDescendants"
            android:focusableInTouchMode="true"
            android:clickable="true" />

        <TextView
            android:id="@+id/add_task_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/task_item_height"
            android:text="@string/add_new_task_text"
            android:gravity="center_vertical"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            style="@style/TextAppearance.AppCompat.Medium"/>
    </LinearLayout>

        </LinearLayout>

    </ScrollView>

    </FrameLayout>


</LinearLayout>