<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/from_template_bottom_drawer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_drawer_background"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:transitionName="@string/bot_drawer_trans_name"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        style="@style/titleTextInputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/menu_vert_margin"
        android:hint="@string/issue_title_hint"
        android:inputType="textPersonName">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/subheadline1_text_style_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:selectAllOnFocus="true"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingHorizontal="6dp">

            <EditText
                android:id="@+id/option_a_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/option_a_name_hint"
                android:inputType="textPersonName" />

            <Spinner
                android:id="@+id/a_icons"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/icon_item_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/menu_vert_margin"
                android:dropDownWidth="@dimen/icon_item_width" />

        </LinearLayout>

        <View
            android:id="@+id/divider5"
            android:layout_width="6dp"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingHorizontal="6dp">

            <EditText
                android:id="@+id/option_b_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/option_a_name_hint"
                android:inputType="textPersonName" />

            <Spinner
                android:id="@+id/b_icons"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/icon_item_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/menu_vert_margin"
                android:dropDownWidth="@dimen/icon_item_width" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/et_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:text="@android:string/cancel"
            android:textColor="@color/colorPrimaryDark" />


        <View
            android:id="@+id/divider6"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="4dp"
            android:background="@color/grey_divider" />

        <Button
            android:id="@+id/et_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:text="@string/save_button_text"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>

</LinearLayout>
